[gd_scene load_steps=5 format=1]

[ext_resource path="res://rcos/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://remote_connector/device_editor_dialog.gd" type="Script" id=2]
[ext_resource path="res://rcos/fonts/teko/bitmap/teko-regular-16.fnt" type="BitmapFont" id=3]
[ext_resource path="res://data_router/icons/32/question_mark.png" type="Texture" id=4]

[node name="device_editor_dialog" type="ColorFrame"]

visibility/self_opacity = 0.9
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0
color = Color( 0, 0, 0, 1 )
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 104.0
margin/bottom = 27.0
custom_fonts/font = ExtResource( 3 )
text = "Device Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 80.0
margin/right = 61.0
margin/bottom = 97.0
custom_fonts/font = ExtResource( 3 )
text = "Icon:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 80.0
margin/right = 111.0
margin/bottom = 97.0
custom_fonts/font = ExtResource( 3 )
text = "Color:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 150.0
margin/right = 62.0
margin/bottom = 167.0
custom_fonts/font = ExtResource( 3 )
text = "Addresses:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hostname_edit" type="LineEdit" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 70.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="icon_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 100.0
margin/right = 50.0
margin/bottom = 140.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false
align = 0

[node name="color_button" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 100.0
margin/right = 100.0
margin/bottom = 140.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="color_frame" type="ColorFrame" parent="color_button"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 4.0
color = Color( 1, 1, 1, 1 )

[node name="address_list" type="ItemList" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 174.0
margin/right = 190.0
margin/bottom = 334.0

[node name="cancel_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 350.0
margin/right = 95.0
margin/bottom = 390.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="save_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 105.0
margin/top = 350.0
margin/right = 190.0
margin/bottom = 390.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false


